front(fix): dark mode, a11y

--- a/frontend/src/styles/_dark.scss
+++ b/frontend/src/styles/_dark.scss
@@ -18,7 +18,8 @@ body.dark-mode {
   }
 
   // Utilitaires de fond
-  .bg-white {
+  .bg-white,
+  .bg-white .ant-table-cell {
     background-color: var(--ant-color-bg-container) !important;
   }
 
